# tollgate-module-basic-rust

./: .gitignore  Cargo.toml  Cross.toml  MIGRATION.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  cross-compile.yml  rust-basic-ci.yml
docs/: architecture.md  binary-size-baseline.md  brick-detection.md  comparison-with-tollgate-rs.md  embedded-portal-plan.md  full-parity-plan.md
openwrt/: Makefile
openwrt/files/etc/init.d/: tollgate-wrt
openwrt/files/lib/upgrade/keep.d/: tollgate
openwrt/files/tollgate-captive-portal-site/: 404.html  welcome.html
src/: degraded.rs  identity.rs  lib.rs  mac_resolver.rs  main.rs  mint_health.rs  monitor.rs  nostr_event.rs  payout.rs  tracing_setup.rs  valve.rs
src/cli/: mod.rs
src/config/: mod.rs  schema.rs  tests.rs
src/http/: mod.rs
src/http/routes/: balance.rs  discovery.rs  ln_invoice.rs  mod.rs  pay.rs  usage.rs  whoami.rs
src/metering/: mod.rs  tests.rs
src/session/: mod.rs  tests.rs
src/wallet/: mod.rs  verify.rs  wallet.rs
tools/gonuts-export/: go.mod  gonuts-export  main.go
